@@ -6,8 +6,6 @@
 #define NeedFunctionPrototypes 1
 #endif
 
-#ifndef SDL_NAME
 #define SDL_NAME(X)	SDL_##X
-#endif
 
 #endif /* _SDLname_h_ */
